'GVars.stw_random = os::random()' lost by JDK-8246476

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 16
    • Affects Version/s: 16
    • Component/s: hotspot
    • None
    • b13
    • generic
    • generic

      The fix for the following bug:

          JDK-8246476 remove AsyncDeflateIdleMonitors option and the safepoint based deflation mechanism

      lost the following line of code:

      $ hg export 9c9e71164fa7 | grep 'GVars.stw_random = '
      - GVars.stw_random = os::random();

      Thanks to Erik O. for noticing this accidental deletion.

            Assignee:
            Daniel Daugherty
            Reporter:
            Daniel Daugherty
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: