8252126: 'GVars.stw_random = os::random()' lost by JDK-8246476

Reviewed-by: eosterlund